# plugroot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  plugroot.local.example.toml  plugroot.toml
.github/workflows/: ci.yml
docs/: manifest.md  migration.md  operations.md  security.md  vaultwarden.md
examples/compose/: README.md  compose.yaml
examples/compose/vaultwarden/: compose.yaml
relayquay/: .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  compose.yaml
relayquay/docs/: cloudflare-access.md  firewall.md  rustdesk-web.md  threat-model.md
relayquay/examples/nftables/: relayquay.nft
relayquay/examples/plugroot/: plugroot.local.example.toml
scripts/: plugroot
src/: main.rs
systemd/user/: README.md
